Disable --release flag when --add-exports is used (#1542)
Disable --release flag when --add-exports is used